set(XRC_SRC
    ${CMAKE_SOURCE_DIR}/src/xrc/xh_activityindicator.cpp
    ${CMAKE_SOURCE_DIR}/src/xrc/xh_animatctrl.cpp
    ${CMAKE_SOURCE_DIR}/src/xrc/xh_bannerwindow.cpp
    ${CMAKE_SOURCE_DIR}/src/xrc/xh_bmp.cpp
    ${CMAKE_SOURCE_DIR}/src/xrc/xh_bmpcbox.cpp
    ${CMAKE_SOURCE_DIR}/src/xrc/xh_bmpbt.cpp
    ${CMAKE_SOURCE_DIR}/src/xrc/xh_bttn.cpp
    ${CMAKE_SOURCE_DIR}/src/xrc/xh_cald.cpp
    ${CMAKE_SOURCE_DIR}/src/xrc/xh_chckb.cpp
    ${CMAKE_SOURCE_DIR}/src/xrc/xh_chckl.cpp
    ${CMAKE_SOURCE_DIR}/src/xrc/xh_choic.cpp
    ${CMAKE_SOURCE_DIR}/src/xrc/xh_choicbk.cpp
    ${CMAKE_SOURCE_DIR}/src/xrc/xh_clrpicker.cpp
    ${CMAKE_SOURCE_DIR}/src/xrc/xh_cmdlinkbn.cpp
    ${CMAKE_SOURCE_DIR}/src/xrc/xh_collpane.cpp
    ${CMAKE_SOURCE_DIR}/src/xrc/xh_combo.cpp
    ${CMAKE_SOURCE_DIR}/src/xrc/xh_comboctrl.cpp
    ${CMAKE_SOURCE_DIR}/src/xrc/xh_datectrl.cpp
    ${CMAKE_SOURCE_DIR}/src/xrc/xh_dirpicker.cpp
    ${CMAKE_SOURCE_DIR}/src/xrc/xh_dlg.cpp
    ${CMAKE_SOURCE_DIR}/src/xrc/xh_editlbox.cpp
    ${CMAKE_SOURCE_DIR}/src/xrc/xh_filectrl.cpp
    ${CMAKE_SOURCE_DIR}/src/xrc/xh_filepicker.cpp
    ${CMAKE_SOURCE_DIR}/src/xrc/xh_fontpicker.cpp
    ${CMAKE_SOURCE_DIR}/src/xrc/xh_frame.cpp
    ${CMAKE_SOURCE_DIR}/src/xrc/xh_gauge.cpp
    ${CMAKE_SOURCE_DIR}/src/xrc/xh_gdctl.cpp
    ${CMAKE_SOURCE_DIR}/src/xrc/xh_grid.cpp
    ${CMAKE_SOURCE_DIR}/src/xrc/xh_html.cpp
    ${CMAKE_SOURCE_DIR}/src/xrc/xh_hyperlink.cpp
    ${CMAKE_SOURCE_DIR}/src/xrc/xh_infobar.cpp
    ${CMAKE_SOURCE_DIR}/src/xrc/xh_listb.cpp
    ${CMAKE_SOURCE_DIR}/src/xrc/xh_listbk.cpp
    ${CMAKE_SOURCE_DIR}/src/xrc/xh_listc.cpp
    ${CMAKE_SOURCE_DIR}/src/xrc/xh_mdi.cpp
    ${CMAKE_SOURCE_DIR}/src/xrc/xh_menu.cpp
    ${CMAKE_SOURCE_DIR}/src/xrc/xh_notbk.cpp
    ${CMAKE_SOURCE_DIR}/src/xrc/xh_odcombo.cpp
    ${CMAKE_SOURCE_DIR}/src/xrc/xh_panel.cpp
    ${CMAKE_SOURCE_DIR}/src/xrc/xh_propdlg.cpp
    ${CMAKE_SOURCE_DIR}/src/xrc/xh_radbt.cpp
    ${CMAKE_SOURCE_DIR}/src/xrc/xh_radbx.cpp
    ${CMAKE_SOURCE_DIR}/src/xrc/xh_scrol.cpp
    ${CMAKE_SOURCE_DIR}/src/xrc/xh_scwin.cpp
    ${CMAKE_SOURCE_DIR}/src/xrc/xh_htmllbox.cpp
    ${CMAKE_SOURCE_DIR}/src/xrc/xh_simplebook.cpp
    ${CMAKE_SOURCE_DIR}/src/xrc/xh_sizer.cpp
    ${CMAKE_SOURCE_DIR}/src/xrc/xh_slidr.cpp
    ${CMAKE_SOURCE_DIR}/src/xrc/xh_spin.cpp
    ${CMAKE_SOURCE_DIR}/src/xrc/xh_split.cpp
    ${CMAKE_SOURCE_DIR}/src/xrc/xh_srchctrl.cpp
    ${CMAKE_SOURCE_DIR}/src/xrc/xh_statbar.cpp
    ${CMAKE_SOURCE_DIR}/src/xrc/xh_stbmp.cpp
    ${CMAKE_SOURCE_DIR}/src/xrc/xh_stbox.cpp
    ${CMAKE_SOURCE_DIR}/src/xrc/xh_stlin.cpp
    ${CMAKE_SOURCE_DIR}/src/xrc/xh_sttxt.cpp
    ${CMAKE_SOURCE_DIR}/src/xrc/xh_text.cpp
    ${CMAKE_SOURCE_DIR}/src/xrc/xh_tglbtn.cpp
    ${CMAKE_SOURCE_DIR}/src/xrc/xh_timectrl.cpp
    ${CMAKE_SOURCE_DIR}/src/xrc/xh_toolb.cpp
    ${CMAKE_SOURCE_DIR}/src/xrc/xh_toolbk.cpp
    ${CMAKE_SOURCE_DIR}/src/xrc/xh_tree.cpp
    ${CMAKE_SOURCE_DIR}/src/xrc/xh_treebk.cpp
    ${CMAKE_SOURCE_DIR}/src/xrc/xh_unkwn.cpp
    ${CMAKE_SOURCE_DIR}/src/xrc/xh_wizrd.cpp
    ${CMAKE_SOURCE_DIR}/src/xrc/xmlres.cpp
    ${CMAKE_SOURCE_DIR}/src/xrc/xmlrsall.cpp
    ${CMAKE_SOURCE_DIR}/src/xrc/xh_dataview.cpp
)

set(XRC_HDR
    wx/xrc/xh_activityindicator.h
    wx/xrc/xh_all.h
    wx/xrc/xh_animatctrl.h
    wx/xrc/xh_bannerwindow.h
    wx/xrc/xh_bmpbt.h
    wx/xrc/xh_bmp.h
    wx/xrc/xh_bmpcbox.h
    wx/xrc/xh_bttn.h
    wx/xrc/xh_cald.h
    wx/xrc/xh_chckb.h
    wx/xrc/xh_chckl.h
    wx/xrc/xh_choic.h
    wx/xrc/xh_choicbk.h
    wx/xrc/xh_clrpicker.h
    wx/xrc/xh_cmdlinkbn.h
    wx/xrc/xh_collpane.h
    wx/xrc/xh_combo.h
    wx/xrc/xh_comboctrl.h
    wx/xrc/xh_datectrl.h
    wx/xrc/xh_dirpicker.h
    wx/xrc/xh_dlg.h
    wx/xrc/xh_editlbox.h
    wx/xrc/xh_filectrl.h
    wx/xrc/xh_filepicker.h
    wx/xrc/xh_fontpicker.h
    wx/xrc/xh_frame.h
    wx/xrc/xh_mdi.h
    wx/xrc/xh_gauge.h
    wx/xrc/xh_gdctl.h
    wx/xrc/xh_grid.h
    wx/xrc/xh_html.h
    wx/xrc/xh_hyperlink.h
    wx/xrc/xh_infobar.h
    wx/xrc/xh_listb.h
    wx/xrc/xh_listbk.h
    wx/xrc/xh_listc.h
    wx/xrc/xh_menu.h
    wx/xrc/xh_notbk.h
    wx/xrc/xh_odcombo.h
    wx/xrc/xh_panel.h
    wx/xrc/xh_propdlg.h
    wx/xrc/xh_radbt.h
    wx/xrc/xh_radbx.h
    wx/xrc/xh_scrol.h
    wx/xrc/xh_scwin.h
    wx/xrc/xh_htmllbox.h
    wx/xrc/xh_simplebook.h
    wx/xrc/xh_sizer.h
    wx/xrc/xh_slidr.h
    wx/xrc/xh_spin.h
    wx/xrc/xh_split.h
    wx/xrc/xh_srchctrl.h
    wx/xrc/xh_statbar.h
    wx/xrc/xh_stbmp.h
    wx/xrc/xh_stbox.h
    wx/xrc/xh_stlin.h
    wx/xrc/xh_sttxt.h
    wx/xrc/xh_text.h
    wx/xrc/xh_tglbtn.h
    wx/xrc/xh_timectrl.h
    wx/xrc/xh_toolb.h
    wx/xrc/xh_toolbk.h
    wx/xrc/xh_tree.h
    wx/xrc/xh_treebk.h
    wx/xrc/xh_unkwn.h
    wx/xrc/xh_wizrd.h
    wx/xrc/xmlres.h
    wx/xrc/xh_dataview.h
)

add_library(wxxrc ${XRC_SRC})

target_link_libraries(wxxrc PRIVATE wxhtml wxxml)

target_include_directories(wxxrc
    PUBLIC
        ${CMAKE_SOURCE_DIR}/include
)
